#353 maybe bug safari weird gap size

--- a/frontend/modulecrediting/src/assets/styles/components/button.scss
+++ b/frontend/modulecrediting/src/assets/styles/components/button.scss
@@ -3,7 +3,6 @@
 
 Button,.p-button, .router-link {
   @include smallHighlightBox();
-  width: max-content;
 
   background-color: $dark-gray;
   &.white {
@@ -17,8 +16,6 @@ Button,.p-button, .router-link {
       background-color: $white-hover;
     }
   }
-
-
 }
 
 .disabled {
